"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Remove unscrollable single column resistances option from gcfclient. 
Change the setting name in the config file and convert old values.
Reduce MAX_BUTTONS to 33. Replace radio buttons with a single push button.
Remove legacy lighting save code. Remove SHOW_RESISTS, use NUM_RESISTS
instead (this reduces the blank space at the bottom of the resistances
window). Call resize_resistance_table from get_message_display, remove
duplicated code from the latter.
Affected files:
gtk/gx11.c, config.c
common/init.c
--
Remove coloured inventory and text options, as well as all supporting code
for them. Make text always print in colour. Remove special code for 
initialising black and white monitors in cfclient, and change its background
colour to colour number 9 (to not be the same as so many draw_info's from the
server). Change colour number 9 to a pale grey to make text show up better.
Affected files:
common/client.h, init.c
gtk/config.c, gtkproto.h, gx11.c, inventory.c
gtk-v2/src/info.c, inventory.c
x11/x11.c, x11proto.h, xutil.c
Brendan Lally 2006-01-31

gtk-v2/src/opengl.c: For opengl mode, create a subwindow of the map window
  with the needed visual.  On many systems, the visual that glXChooseVisual()
  returns doesn't match the default visual of the system, thus resulting
  in opengl not being able to create a context.
MSW 2006-01-28

gtk/gx11.c: add a 'spell options' box to allow extra options to be passed to
spells, make any mouse button change the spell description, not just the
left one and reorder some gtk function calls to improve clarity
Brendan Lally 2006-10-21

Fixed compilation for some compilers.
gtk/gx11.c inventory.c
Ryo 2006-01-19

common/commands.c: actually read the right amount of data on an updspell
--
Add spell listing support to gcfclient and common, in particular:
common/client.c: addspell, updspell, delspell function pointers, send