@@ -2,6 +2,10 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+gtk/inventory.c, gtk-v2/src/inventory.c, x11/x11.c: 
+Make the message displayed for locked items more descriptive.
+Brendan Lally 2005-02-09
+
 Remove unscrollable single column resistances option from gcfclient. 
 Change the setting name in the config file and convert old values.
 Reduce MAX_BUTTONS to 33. Replace radio buttons with a single push button.
